fix: UI misaligned search icon and default is_enabled for OJ config

--- a/static/scss/_navbar.scss
+++ b/static/scss/_navbar.scss
@@ -104,6 +104,7 @@
   .position-relative {
     display: flex;
     align-items: center;
+    position: relative;
   }
 
   .search-icon {
